[gd_scene load_steps=10 format=3 uid="uid://koadpcy2qhwu"]

[ext_resource type="Script" uid="uid://bua6nw7akb82v" path="res://scripts/bed.gd" id="1_pqek7"]
[ext_resource type="Texture2D" uid="uid://coqcnmdd0cbj4" path="res://assets/frames/bed/bed_dog_asleep_1.PNG" id="2_ulp3u"]
[ext_resource type="Texture2D" uid="uid://dshclfn618hle" path="res://assets/frames/bed/bed_dog_asleep_2.PNG" id="3_honl5"]
[ext_resource type="Texture2D" uid="uid://bojn36lq46po1" path="res://assets/frames/bed/bed_dog_asleep_3.PNG" id="4_3v2c1"]
[ext_resource type="Texture2D" uid="uid://bgdbc3yhn1km5" path="res://assets/frames/bed/bed_dog_awake_1.PNG" id="5_la8lx"]
[ext_resource type="Texture2D" uid="uid://dencb5rtlps1p" path="res://assets/frames/bed/bed_dog_awake_2.PNG" id="6_60r8n"]
[ext_resource type="Texture2D" uid="uid://vcx6yf0g4pro" path="res://assets/frames/bed/bed_dog_awake_3.PNG" id="7_05mtd"]
[ext_resource type="FontFile" uid="uid://dqs0oaj4yyi5i" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="8_ulp3u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_u5sy4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ulp3u")
}, {
"duration": 1.0,
"texture": ExtResource("3_honl5")
}, {
"duration": 1.0,
"texture": ExtResource("4_3v2c1")
}],
"loop": true,
"name": &"asleep",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_la8lx")
}, {
"duration": 1.0,
"texture": ExtResource("6_60r8n")
}, {
"duration": 1.0,
"texture": ExtResource("7_05mtd")
}],
"loop": true,
"name": &"awake",
"speed": 2.0
}]

[node name="Bed" type="CanvasLayer"]
script = ExtResource("1_pqek7")

[node name="BedWithDog" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(960, 540)
sprite_frames = SubResource("SpriteFrames_u5sy4")
animation = &"awake"

[node name="ComfortMinigame" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TimeLeft" type="Label" parent="ComfortMinigame"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 814.0
offset_top = 635.0
offset_right = 854.0
offset_bottom = 658.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.431373)
text = "20.0s"

[node name="DogTip" type="Label" parent="ComfortMinigame"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 665.0
offset_top = 612.0
offset_right = 773.0
offset_bottom = 634.0
theme_override_font_sizes/font_size = 15
text = "(type 'calm' 5x)"

[node name="HBoxContainer" type="HBoxContainer" parent="ComfortMinigame"]
layout_mode = 0
offset_left = 627.0
offset_top = 643.0
offset_right = 817.0
offset_bottom = 693.0
metadata/_edit_group_ = true

[node name="CButton" type="Button" parent="ComfortMinigame/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = " C "

[node name="AButton" type="Button" parent="ComfortMinigame/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = " A "

[node name="LButton" type="Button" parent="ComfortMinigame/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = " L "

[node name="MButton" type="Button" parent="ComfortMinigame/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = " M "

[node name="DogComfortCooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="DogComfortDeadline" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 100.0
one_shot = true

[node name="SleepButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 995.0
offset_top = 621.0
offset_right = 1342.0
offset_bottom = 693.0
theme_override_fonts/font = ExtResource("8_ulp3u")
theme_override_font_sizes/font_size = 40
text = "Go To Sleep.."

[connection signal="timeout" from="DogComfortCooldownTimer" to="." method="_on_dog_comfort_cooldown_timer_timeout"]
[connection signal="timeout" from="DogComfortDeadline" to="." method="_on_dog_comfort_deadline_timeout"]
[connection signal="pressed" from="SleepButton" to="." method="_on_sleep_button_pressed"]
